Assets/Css/styles.css
/* @import url(https://fonts.googleapis.com/css?family=Montserrat); */
html {
    scroll-behavior: smooth;
}
body {
    /* width: 100%; */
    /* height: 100%; */
    background-color: rgb(40,44,47);
    font-family: Montserrat;
}


/*----------------- Nav Menu ---------------*/
/* .navbar {
    border-bottom: 5px solid transparent;
} */
.bg-dark {
    background: rgb(29,29,29)!important;
/* background: linear-gradient(0deg, rgba(33,37,43,1) 0%, rgba(29,29,29,1) 30%)!important; */
}
.dropdown-menu {
    /* padding-top: 10%; */
    /* padding-right: 15%; */
    margin-top: 13%;
    color: #ffffff;
    background-color: rgb(29,29,29);
    border: none;
}

.dropdown-item {
    padding-top: 2%;
    color: rgba(255,255,255,.5);
}
.dropdown-item:hover {
    background-color: rgb(40,44,47, 0.5);
    color: #ffffff;
}


/* ------------ Text Animations Start ------------*/

svg {
    /* display: block; */
    font: 11.5em 'Montserrat';
    width: 250px;
    /* height: 100px; */
    /* margin: 0 auto; */
}

.text-copy {
    fill: none;
    stroke: white;
    stroke-dasharray: 6% 29%;
    stroke-width: 5px;
    stroke-dashoffset: 0%;
    animation: stroke-offset 5.5s infinite linear;
}

.text-copy:nth-child(1){
	stroke: #4B4BBC;                    /* #ffffff; */
	animation-delay: -1;
}
.text-copy:nth-child(2){
	stroke: #00C4BF;                            /* #e3e3e3; */
	animation-delay: -2s;
}
.text-copy:nth-child(3){
	stroke: #0073DC;                            /* #b6b6b6; */
	animation-delay: -3s;
}
.text-copy:nth-child(4){
	stroke: #0092E4;                              /* #8b8b8b; */
	animation-delay: -4s;
}
.text-copy:nth-child(5){
	stroke: #00C4BF;                               /* #5a5959; */
	animation-delay: -5s;
}

@keyframes stroke-offset{
    100% {stroke-dashoffset: -35%;}
}
/* ----------- Text Animations End --------------*/
/* ------------ Nav Menu End --------------------*/



/*---------------- Header Section ---------------*/
/* ---Particle Javascript ---*/
header {
    height: 100vh;;
}
.header-text {
    font-size: 3em;
    font-weight: 700;
}
.header-icons i {
    padding: .5%;
    font-size: 30px;
    color: #fff;
}

#particles-js {
    cursor: grab;
    /* position: absolute; */
    background: rgb(29,29,29);
    background: linear-gradient(0deg, rgba(29,29,29,1) 30%, rgba(33,37,43,1) 95%);
    /* width: 200vh; */
    /* height: 100vh; */
    z-index: 2;
    
}

.header-wrapper {
    cursor: default;
    /* opacity: .8; */
    position: absolute;
    width: 50%;
    height: 50%;
    /* z-index: 0; */
    /* background-color: rgb(40,44,47, .5); */
    margin-left: 25%;
    color: white;
}


/* --------------Image Slide Show -------------------*/

.carousel-item {
    /* margin-top: 105vh; */
    height: 100vh;
    min-height: 350px;
    background: rgb(40,44,52) no-repeat center center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

/* .carousel-control-next-icon, .carousel-control-prev-icon {
    margin-top: 100vh;
} */



/* ------------------Section/About -----------------*/

#about-section {
    /* background-color: rgb(33,37,43); */
    background: rgb(29,29,29);
    background: linear-gradient(0deg, rgba(33,37,43,1) 30%, rgba(29,29,29,1) 85% );
    /* width: 100vh; */
}

.about-container {
    padding: 5%;
    /* margin-top: 5%; */
    /* margin-bottom: 4%; */
    color: #ffffff;
}

